--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -1,16 +1,4 @@
 ﻿{
-  "Data": {
-    "Cds": {
-      "ProviderName": "Microsoft.Data.SqlClient",
-      "TestFormationDotnetcore": {
-        "Infrastructure": {
-          "Data": {
-            "ConnectionStringName": "DefaultConnection"
-          }
-        }
-      }
-    }
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
@@ -36,5 +24,14 @@
       }
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "CartegieConfiguration": {
+    "baseUrl": "https://6037a3775435040017722f92.mockapi.io/api/v1/Company/",
+    "apiKey": "Va5r2R6Pbt1AOl8v0MLm",
+
+    "BySiret": "ResearchBySiret",
+    "ByMultiple": "RechercheMultiple",
+    "ById": "ResearchById"
+  }
 }
