--- a/tests/Pact/Provider/Cds.TestFormationDotnetcore.Tests.Pact.Provider.csproj
+++ b/tests/Pact/Provider/Cds.TestFormationDotnetcore.Tests.Pact.Provider.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Api\Cds.TestFormationDotnetcore.Api.csproj" />
+    <ProjectReference Include="..\..\..\src\Api\Cds.BusinessCustomer.Api.csproj" />
   </ItemGroup>
 
   <ItemGroup>
