--- a/tests/Bdd/Cds.TestFormationDotnetcore.Tests.Bdd.csproj
+++ b/tests/Bdd/Cds.TestFormationDotnetcore.Tests.Bdd.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Api\Cds.TestFormationDotnetcore.Api.csproj" />
+    <ProjectReference Include="..\..\src\Api\Cds.BusinessCustomer.Api.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
