--- a/tests/Bdd/Cds.BusinessCustomer.Tests.Bdd.csproj
+++ b/tests/Bdd/Cds.BusinessCustomer.Tests.Bdd.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="MongoDB.Driver.signed" Version="2.10.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.3" />
+    <PackageReference Include="Moq" Version="4.14.0" />
     <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="SpecFlow" Version="3.1.97" />
     <PackageReference Include="SpecFlow.Tools.MsBuild.Generation" Version="3.1.97" />
