--- a/tests/Bdd/Cds.BusinessCustomer.Tests.Bdd.csproj
+++ b/tests/Bdd/Cds.BusinessCustomer.Tests.Bdd.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup Label="Package References">
     <PackageReference Include="Cds.Foundation.Test.SpecFlow" Version="2.0.2" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="MongoDB.Driver.signed" Version="2.10.4" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.3" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.3" />
@@ -31,7 +32,7 @@
     <ProjectReference Include="..\..\src\Api\Cds.BusinessCustomer.Api.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="appsettings.json">
+    <None Update="appsettingsTest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
