--- a/tests/Unit/Infrastructure/Cds.BusinessCustomer.Infrastructure.Tests.Unit.csproj
+++ b/tests/Unit/Infrastructure/Cds.BusinessCustomer.Infrastructure.Tests.Unit.csproj
@@ -9,6 +9,7 @@
 
     <ItemGroup Label="Package References">
         <PackageReference Include="Moq.Dapper" Version="1.0.3" />
+        <PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
     </ItemGroup>
 
     <ItemGroup>
