Pact tests - done - v1

--- a/tests/Pact/Provider/Cds.BusinessCustomer.Tests.ProviderPact.csproj
+++ b/tests/Pact/Provider/Cds.BusinessCustomer.Tests.ProviderPact.csproj
@@ -26,6 +26,12 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Json\get_customer_byMultiple_BadRequest.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Json\get_customer_bySiret_BadRequest.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Json\get_customer_byId_NotFound.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
